--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=myspringapp
+
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+info.app.name=Actuator Demo
+info.app.version=3.0.1
+info.app.description=Spring Boot Actuator Example
