--- a/deploymentConfig.yaml
+++ b/deploymentConfig.yaml
@@ -16,6 +16,19 @@ spec:
           image: 'myspringapp:latest'
           ports:
             - containerPort: 8080
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 3
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 3
+
           env:
             - name: JAVA_OPTS
               value: '-Xmx512m'
